# zzz

./: CLAUDE.md  Cargo.toml  README.md  plan.md  tasks.md  vibe.zsh  zellij.kdl
.claude/: settings.local.json
.claude/commands/tasks/: implement.md  pick.md
src/: communication.rs  coordination_message.rs  file_system.rs  lib.rs  litellm_config.rs  main.rs  notification.rs  pane_role.rs  workflow_phase.rs  zellij_service.rs
src/communication/: communication.rs  envelope.rs  error.rs  mod.rs  router.rs
