[package]
name = "zzz"
version = "0.1.0"
authors = ["rusha"]
edition = "2018"

[[bin]]
name = "zzz"
path = "src/main.rs"

[lib]
name = "zzz"
path = "src/lib.rs"

[dependencies]
zellij-tile = "0.41.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.0"

[dev-dependencies]
tempfile = "3.0"
